--- a/draft_ABP.tex
+++ b/draft_ABP.tex
@@ -970,7 +970,7 @@ For each element $ I\in \mathcal B$, we define $I^{(0)}=\{I\}$ and  $I^{(1)}$ as
 \end{equation} 
 and stop when $\lvert I^{(s)}\rvert =1$. With the defination of $I^{(i)}$, the coresponding $u$-variable is
 \begin{equation}
-   u_{I} =\prod_{i}(-1)^{i} \prod_{I_{a}^{(i)}\in I^{(i)}} p(I_{a}^{(i)})
+   u_{I} =\prod_{i}\prod_{I_{a}^{(i)}\in I^{(i)}} p(I_{a}^{(i)})^{(-1)^{i} }
 \end{equation}
 
 \subsection{u eqs}
@@ -982,9 +982,9 @@ For a generic generalized permutohedra $\mathscr P$, it's usually difficult to s
 \prod_{I\in \mathscr P}x_I^{S_I}=\prod_{J\in \mathscr P}u_J^{F_J}=\prod_{J\in\mathscr P}\prod_{I\subset J,I\in \mathscr P}u_J^{S_I}=\prod_{I\in\mathscr P}\biggl(\prod_{J\supset I,J\in\mathscr P}u_J\bigg)^{S_I},
 \]
 so
-\[
+\begin{equation}
 x_I=\prod_{J\supset I,J\in\mathscr P}u_J
-\]
+\end{equation}
 for any $I\in \mathscr P$, where we introduce a fake $u$-variable 
 $u_{[0,n]}:=x_{[0,n]}$. We know some algebraic equations of $\{x_I\}$, 
 for example, linear equations $x_I+x_J=x_{I\cup J}$ for $I\cap J=\varnothing$, 
@@ -1016,7 +1016,7 @@ For permutohedron $\mathscr P_n$, I conjecture that
 1-u_I=1-\prod_{J\supset I}x_J^{(-1)^{|J|-|I|}}=\frac{\prod_{|J|-|I| \text{ odd}; J\supset I}x_J-\prod_{|J|-|I| \text{ even}; J\supset I}x_J}{\prod_{|J|-|I| \text{ odd}; J\supset I}x_J}
 =\frac{f_{I,n}\prod_{i\not\in I}x_i}{\prod_{|J|-|I| \text{ odd}; J\supset I}x_J},
 \]
-where $f_{I,n}$ is an irreducible polynomial with positive coefficients. It's easy to see $x_i$ for $i\not\in I$ is a factor of numerator by setting $x_i=0$, but it's not obvious whether $f_{I,n}$ is irreducible. I've checked many examples, and corresponding polynomials $f_{I,n}$ are always irreducible.
+where $f_{I,n}$ is an irreducible polynomial with positive coefficients. It's easy to see $x_i$ for $i\not\in I$ is a factor of the numerator by setting $x_i=0$, but it's not obvious whether $f_{I,n}$ is irreducible. I've checked many examples, and corresponding polynomials $f_{I,n}$ are always irreducible.
 
 From
 \[
@@ -1031,10 +1031,10 @@ then
 \prod_{i\not\in I}x_i\bigg/\prod_{|J|-|I| \text{ odd}; J\supset I}x_J
 =\prod_{J\not\supset I} u_J^{|J|-|I\cap J|}\prod_{J\supset I} u_J^{|J|-|I|-2^{|J|-|I|-1}}.
 \]
-Since $|J|-|I|-2^{|J|-|I|-1}\leq 0$, it's naturally to conjecture that
-\[
+Since $|J|-|I|-2^{|J|-|I|-1}\leq 0$, it's natural to conjecture that
+\begin{equation}
 1-u_I=g(u)\prod_{J\not\supset I} u_J^{|J|-|I\cap J|},
-\]
+\end{equation}
 where $g$ is a polynomial.
 The product $\prod_{J\not\supset I} u_J^{|J|-|I\cap J|}$ has appeared in all known examples with right powers. It's clear that any compatible $u_J$ for $J\subset I$ doesn't appear in the product because $I\cap J=J$. Thus, the final conjecture is about the compatibility degree:
 \[
