Updates from Overleaf

--- a/draft_ABP.tex
+++ b/draft_ABP.tex
@@ -1024,12 +1024,12 @@ From
 \quad\text{and}\quad
 \prod_{|J|-|I| \text{ odd}; J\supset I}x_J
 =
-\prod_{J\supset I}u_J^{2^{|J|-|I|-1}},
+\prod_{J\supsetneq I}u_J^{2^{|J|-|I|-1}},
 \]
 then
 \[
 \prod_{i\not\in I}x_i\bigg/\prod_{|J|-|I| \text{ odd}; J\supset I}x_J
-=\prod_{J\not\supset I} u_J^{|J|-|I\cap J|}\prod_{J\supset I} u_J^{|J|-|I|-2^{|J|-|I|-1}}.
+=\prod_{J\not\supset I} u_J^{|J|-|I\cap J|}\prod_{J\supsetneq I} u_J^{|J|-|I|-2^{|J|-|I|-1}}.
 \]
 Since $|J|-|I|-2^{|J|-|I|-1}\leq 0$, it's natural to conjecture that
 \begin{equation}
