Updates from Overleaf

--- a/draft_ABP.tex
+++ b/draft_ABP.tex
@@ -398,7 +398,7 @@
 
 \begin{center}
 
-{\Large \bf  Binary geometries: Associahedra, Cyclohedra and Generalized Permutahedra}
+{\Large \bf  Binary geometries: Associahedra, Cyclohedra and （Generalized) Permutahedra}
 
 
 \end{center}
@@ -973,6 +973,20 @@ and stop when $\lvert I^{(s)}\rvert =1$. With the defination of $I^{(i)}$, the c
    u_{I} =\prod_{i}\prod_{I_{a}^{(i)}\in I^{(i)}} p(I_{a}^{(i)})^{(-1)^{i} }
 \end{equation}
 
+% This conjecture can be extended to generalized permutohedra, but I only have checked the several cases of graph associahedra for now.
+
+% Based on the above conjecture,  there is a statement for the binary geometries corresponding to the facet $u_{I}\to 0$, 
+% that is the $u$-system for the facet $u_{I}\to 0$ is corresponding to the generlaized permutohedra $\mathcal{P}_{I}\otimes \mathcal{P}_{\bar{I}}$ with building sets  
+% \[
+% \mathcal{B}_{I} = \{J\vert J\subset I, J\in \mathcal{B}\}
+% \]
+% and 
+% \[
+% \mathcal{B}_{\bar{I}} = \{J-I\vert  J\in \mathcal{B}-\mathcal{B}_{I} \}
+% \]
+% where $J-I$ means the complement of $J$ with respect to $I$. This statement directly follow from the fact that $u_{I}\to 0$ is equivalent to take $x_{i}\to t x_{i} $ for $i\in I$ then take $t \to 0$
+% )
+
 \subsection{u eqs}
 
 ({\bf Zhenjie}: A possible way to find some $u$-equations of generalized permutohedra)
@@ -1041,22 +1055,6 @@ The product $\prod_{J\not\supset I} u_J^{|J|-|I\cap J|}$ has appeared in all kno
 (I||J)=|J|-|I\cap J|\text{ for $I\not\subset J$},\quad  (I||J)=0 \text{ for $I\subset J$}.
 \]
 It's not symmetric when $|I|\neq |J|$.
-
-% This conjecture can be extended to generalized permutohedra, but I only have checked the several cases of graph associahedra for now.
-
-% Based on the above conjecture,  there is a statement for the binary geometries corresponding to the facet $u_{I}\to 0$, 
-% that is the $u$-system for the facet $u_{I}\to 0$ is corresponding to the generlaized permutohedra $\mathcal{P}_{I}\otimes \mathcal{P}_{\bar{I}}$ with building sets  
-% \[
-% \mathcal{B}_{I} = \{J\vert J\subset I, J\in \mathcal{B}\}
-% \]
-% and 
-% \[
-% \mathcal{B}_{\bar{I}} = \{J-I\vert  J\in \mathcal{B}-\mathcal{B}_{I} \}
-% \]
-% where $J-I$ means the complement of $J$ with respect to $I$. This statement directly follow from the fact that $u_{I}\to 0$ is equivalent to take $x_{i}\to t x_{i} $ for $i\in I$ then take $t \to 0$
-% )
-
-
 
 \subsubsection{Example: Binary geometries for Cayley graph, graph associahedra and generalized permutohedra. }
 
