Updates from Overleaf

--- a/draft_ABP.tex
+++ b/draft_ABP.tex
@@ -398,7 +398,7 @@
 
 \begin{center}
 
-{\Large \bf  Binary geometries: Associahedra, Cyclohedra and （Generalized) Permutahedra}
+{\Large \bf  Binary geometries: Associahedra, Cyclohedra and (Generalized) Permutahedra}
 
 
 \end{center}
